设置java-6-sun和已有ant和项目内置ant的冲突。